#define controlled robotness

--- a/optical_flow/Makefile
+++ b/optical_flow/Makefile
@@ -10,4 +10,8 @@ ifdef LIVE
     endif
 endif
 
+ifdef ROBOT
+    CXXFLAGS    += -DROBOT
+endif
+
 include $(GENN_PATH)/userproject/include/makefile_common_gnu.mk
