Add MPI support for va_benchmark
Signed-off-by: Mengchi Zhang <zhan2308@purdue.edu>

--- a/va_benchmark/Makefile
+++ b/va_benchmark/Makefile
@@ -1,3 +1,7 @@
+ifdef MPI_ENABLE
+EXECUTABLE      := simulator_${OMPI_COMM_WORLD_RANK}
+else
 EXECUTABLE      := simulator
+endif
 SOURCES         := simulator.cu
 include $(GENN_PATH)/userproject/include/makefile_common_gnu.mk
